# Prueba-Monex

./: .gitignore  00 EDA.ipynb  01 EDA.ipynb  01 Incumplimento.ipynb  01 Otorgamiento.ipynb  02 Incumplimento.ipynb  02 Otorgamiento.ipynb  Pruebas Analista de Riesgo de Credito.docx  Pruebas Analista de Riesgo de Creědito.docx  Pruebas Analista de Riesgo.docx  README.md  algo.py  main_analysis.py  pyproject.toml  ~$uebas Analista de Riesgo.docx
Data/: applications.csv  macro.csv
data/clean/: apps_model_filtered.csv
