[project]
name = "Prueba-Monex"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "leo_m", email = "leonardodanielrosasrios@gmail.com"},
]
dependencies = ["pandas>=3.0.0", "numpy>=2.4.2", "matplotlib>=3.10.8", "scikit-learn>=1.8.0", "seaborn>=0.13.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
